# HydroModel

./: CMakeLists.txt  LICENSE  README.md  orig_input.txt  premake5.lua
BipartiteGraph/: CMakeLists.txt
BipartiteGraph/src/: BipartiteGraph.h  BipartiteGraphAlgorithms.h  BipartiteGraphEdge.h  BipartiteNode.h
EqNode/: CMakeLists.txt
EqNode/src/: EqNode.cpp  EqNode.h  NewtonMethodEqNode.cpp  NewtonMethodEqNode.h  simplify.cpp  simplify.h
HydroModels2/: CMakeLists.txt
HydroModels2/src/: Environments.h  HydroModelsInterpreter.cpp  HydroModelsInterpreter.h  HydroModelsUIAPI.cpp  HydroModelsUIAPI.h  input.txt  orig_input.txt  vei.txt
HydroModels2/src/interpreter/: HydroModels.g4  HydroModels.interp  HydroModelsBaseVisitor.cpp  HydroModelsBaseVisitor.h  HydroModelsLexer.cpp  HydroModelsLexer.h  HydroModelsLexer.interp  HydroModelsLexer.tokens  HydroModelsParser.cpp  HydroModelsParser.h  HydroModelsVisitor.cpp  HydroModelsVisitor.h
HydroModelsGUI/: CMakeLists.txt
HydroModelsGUI/src/: App.cpp  App.h
HydroModelsGUI/src/wxfb/: HydroModelGUI.cpp  HydroModelGUI.h  HydroModelProjectMainFrame.cpp  HydroModelProjectMainFrame.h  wxFB_test.fbp
Solver/: CMakeLists.txt
Solver/src/: CoreDLL.h  ESO.h  ESOSolverFactory.cpp  ESOSolverFactory.h  EqNodePtrESO.cpp  EqNodePtrESO.h  NLAESOSolver.h  NewtonModifiedESOSolver.cpp  NewtonModifiedESOSolver.h  SimpleESOSolver.cpp  SimpleESOSolver.h  SolverLog.cpp  SolverLog.h  cminpackESOSolver.cpp  cminpackESOSolver.h  nloptESOSolver.cpp  nloptESOSolver.h
scripts/: Win-GenerateVS2019.bat
